Bug 143517 - FILESAVE: DOCX: Numbering list is incorrect in MSO after RT
Summary: FILESAVE: DOCX: Numbering list is incorrect in MSO after RT
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-07-23 17:20 UTC by Xisco Faulí
Modified: 2022-03-17 11:10 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison before and after RT (445.85 KB, image/png)
2021-07-23 17:20 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-07-23 17:20:00 UTC
Created attachment 173809 [details]
Comparison before  and after RT

Steps to reproduce:
1. Open attachment 100916 [details] from bug 79940
2. Save it as DOCX
3. Open the new generated file with MSO Word ( I'm using 2010 )

-> Numbering list in point II.A is incorrect. See comparison image

Reproduced in

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: c6695a4aabeaae99174b7658f2b813788ecff7f0
CPU threads: 4; OS: Linux 5.7; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2021-07-23 17:21:04 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=bedd73ea578ad01171536ee90d22249fa221d2d6

author	Justin Luth <justin_luth@sil.org>	2021-04-30 13:01:29 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2021-07-08 13:16:06 +0200
commit bedd73ea578ad01171536ee90d22249fa221d2d6 (patch)
tree 28bf362cbe71f87a228aef23c05e113169defe48
parent 19e0c59a722dca6cd8b6ca61ed421c34c2773d18 (diff)
tdf#141964 writerfilter CN: get paragraph and inherited listLevel

Bisected with: bibisect-linux64-7.3

Adding Cc: to Justin Luth
Comment 2 Commit Notification 2021-07-26 17:25:02 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1441e001938d6a0b19743ef8170980238b88d350

tdf#143517 partial revert "tdf#141964 writerfilter CN: get para...

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Justin L 2021-07-27 05:47:52 UTC
Xisco: thanks for finding these problems.