tdf#143517 partial revert "tdf#141964 writerfilter CN: get para...

...paragraph and inherited listLevel

IIRC, I changed GetCurrentNumberingCharStyle() on the premise that
no matter where the level is defined (paragraph or style),
any function looking for it should use the inherited/applied level.
But GetCurrentNumberingCharStyle() itself looks like a bogus
hack that probably should be eliminated completely.

Unfortunately, 2123ede032ca64f696ef54af4ad3238974ca2b5d
from 2012 which introduced it does not include a unit test,
so there is no easy way to test whether it still has any
function.
[Eliminating it passes all unit tests and sounds similar to
tdf#108518 revert OOo hack: Fix issue #i119405: Numbering text style.]

In any case, just revert the changes to this function for now,
since hopelessly faulty functions don't need to operate "better".

Another alternative would be to just use GetListlevel(pEntry)
to at least allow style inheritance, but since it seems like
a completely faulty function to begin with, it seems better to
leave the function completely untouched.

Change-Id: I2eba777fdd68615d68b63288005a30301fa6ea2f